app/02_MemoryAllocation/SAMV71_Xplained_Ultra/$STDERR.txt
C:\Samv7_02\SAMV7x\SAMV71x\app\02_MemoryAllocation\src\Mem_Alloc.c:16:5: error: initializer element is not computable at load time
     uint32_t heapsize = (uint8_t *) &_heap_mem_end - (uint8_t *) &_heap_mem_start;
     ^
C:\Samv7_02\SAMV7x\SAMV71x\app\02_MemoryAllocation\src\Mem_Alloc.c:24:5: error: initializer element is not constant
     };
     ^
C:\Samv7_02\SAMV7x\SAMV71x\app\02_MemoryAllocation\src\Mem_Alloc.c:24:5: error: (near initialization for 'MemControl.FreeBytes')
C:\Samv7_02\SAMV7x\SAMV71x\app\02_MemoryAllocation\src\Mem_Alloc.c: In function 'Mem_Alloc':
C:\Samv7_02\SAMV7x\SAMV71x\app\02_MemoryAllocation\src\Mem_Alloc.c:30:9: warning: 'return' with a value, in function returning void
         return 0;
         ^
